# mt5-portal

./: README.md  pyproject.toml
app/api/: __init__.py  app.py
app/db/: __init__.py  sqlite.py  storage.py
app/domain/: daily_close.py  import_wizard.py  ledger.py  models.py  mt5.py  portal.py
app/security/: __init__.py  encryption.py
app/services/: allocation.py  daily_close.py  groups.py  import_wizard.py  ledger.py  mt5_accounts.py  mt5_terminal.py
app/web/: app.js  index.html  styles.css
app/workers/: mt5_sync.py
tests/: test_admin_financial_workflows.py  test_allocation.py  test_api.py  test_auth_sessions.py  test_daily_close.py  test_groups.py  test_import_wizard.py  test_ledger.py  test_mt5_accounts.py  test_mt5_terminal.py  test_reports_and_exports.py  test_security_encryption.py  test_sqlite_persistence.py  test_storage_persistence.py  test_web_ui.py
