[project]
name = "mt5-portal-backend"
version = "0.1.0"
description = "Accounting core and API for a multi-group MT5 client portal"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
mt5 = [
    "MetaTrader5>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
